--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -673,54 +673,54 @@
 "您无法创建超过 %d 个队伍" = "ユニット数が %d 件の上限を到達しています。";
 
 /* new in 1.5.0 */
-"删除" = "删除";
-"寻找同僚" = "寻找同僚";
-"我的信息" = "我的信息";
-"发布" = "发布";
-"游戏ID" = "游戏ID";
-"昵称" = "昵称";
-"我的队长" = "我的队长";
-"希望征集的队长" = "希望征集的队长";
-"留言" = "留言";
+"删除" = "消す";
+"寻找同僚" = "同僚を探す";
+"我的信息" = "わたしの情報";
+"发布" = "掲載する";
+"游戏ID" = "ゲームID";
+"昵称" = "ニックネーム";
+"我的队长" = "わたしのセンターアイドル";
+"希望征集的队长" = "募集したいセンターアイドル";
+"留言" = "コメント";
 
-"下拉刷新数据" = "下拉刷新数据";
-"获取数据失败，请检查您的网络并确保iCloud处于登录状态" = "获取数据失败，请检查您的网络并确保iCloud处于登录状态";
-"已复制ID到剪贴板" = "已复制ID到剪贴板";
-"没有更多数据了" = "没有更多数据了";
-"加载更多" = "加载更多";
-"正在加载..." = "正在加载...";
+"下拉刷新数据" = "プルダウンで再読み込む";
+"获取数据失败，请检查您的网络并确保iCloud处于登录状态" = "データ取得失敗。iCloudログイン状況とネットワーク接続状況を確認してください。";
+"已复制ID到剪贴板" = "ゲームIDがクリップボードにコピーしました";
+"没有更多数据了" = "データは読み込み完了しました";
+"加载更多" = "もっと読み込む";
+"正在加载..." = "読み込み中...";
 
-"位置" = "位置";
-"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"";
-"潜能" = "潜能";
-"偶像" = "偶像";
-"左滑删除" = "左滑删除";
-"筛选条件" = "筛选条件";
-"最低潜能等级" = "最低潜能等级";
+"位置" = "タイプ";
+"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "今は1タイプのみスクリーニングできます。スクリーニングしないの場合は「制限なし」を選択してください";
+"潜能" = "ポテンシャル";
+"偶像" = "アイドル";
+"左滑删除" = "左スワイプで消す";
+"筛选条件" = "スクリーニング条件";
+"最低潜能等级" = "ポテLv.最低値";
 "添加一名偶像" = "添加一名偶像";
-"不限" = "不限";
+"不限" = "制限なし";
 
 // using deresute.me
-"未能获取到正确的数据，请稍后再试" = "未能獲取到正確的資料，請稍後再試";
-"下一步" = "下一步";
-"获取数据中..." = "获取数据中...";
-"您输入的游戏ID不存在" = "您输入的游戏ID不存在";
-"输入您的游戏ID" = "Game ID";
+"未能获取到正确的数据，请稍后再试" = "正しいデータを取得できません、あとでもう一度試してください";
+"下一步" = "次へ";
+"获取数据中..." = "データを取得中...";
+"您输入的游戏ID不存在" = "ご入力したゲームIDは存在しないです";
+"输入您的游戏ID" = "ゲームIDを入力";
 // using manually input
-"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布";
-"至少添加一名自己的队长" = "至少添加一名自己的队长";
-"昵称不能超过10个文字" = "昵称不能超过10个文字";
+"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "ダブルタップで全てのアイドルから選択、ロングタップでポテ振りやアイドル消す、「わたしのセンター」で少なくとも1タイプを登録しなければ掲載できません";
+"至少添加一名自己的队长" = "少なくとも1タイプのセンターを登録しなければならない";
+"昵称不能超过10个文字" = "ニックネームは10文字超えることはできない";
 // both
-"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间";
-"您输入的游戏ID不合法" = "您输入的游戏ID不合法";
-"发布失败，请确保iCloud已登录并且网络状态正常" = "发布失败，请确保iCloud已登录并且网络状态正常";
-"撤销失败，请确保iCloud已登录并且网络状态正常" = "撤销失败，请确保iCloud已登录并且网络状态正常";
-"发布成功" = "发布成功";
-"撤销成功" = "撤销成功";
-"撤销中..." = "撤销中...";
-"撤销" = "撤销";
-"不再公开您之前已经发布的信息" = "不再公开您之前已经发布的信息";
-"保存信息，但是暂不公开" = "保存信息，但是暂不公开";
+"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "わたしの情報を全てのユーザーに配布します。再度掲載する場合、元の情報は上書きされし、更新時間を更新します";
+"您输入的游戏ID不合法" = "不正なゲームIDです";
+"发布失败，请确保iCloud已登录并且网络状态正常" = "掲載失敗。iCloudログイン状況とネットワーク接続状況を確認してください。";
+"撤销失败，请确保iCloud已登录并且网络状态正常" = "取り消し失敗。iCloudログイン状況とネットワーク接続状況を確認してください。";
+"发布成功" = "掲載成功";
+"撤销成功" = "取り消し成功";
+"撤销中..." = "取り消し中...";
+"撤销" = "取り消す";
+"不再公开您之前已经发布的信息" = "済ました情報の掲載を取り消す";
+"保存信息，但是暂不公开" = "掲載しないのまま情報を保存する";
 "保存" = "保存";
 
 /* localize skill explains locally */
@@ -731,37 +731,31 @@
 "使所有GREAT音符改判为PERFECT" = "GREATをPERFECTにする";
 "使所有GREAT/NICE音符改判为PERFECT" = "GREAT/NICEをPERFECTにする";
 "使所有GREAT/NICE/BAD音符改判为PERFECT" = "GREAT/NICE/BADをPERFECTにする";
-// TODO: 需要翻译
-"所有音符改判为PERFECT" = "all notes will become Perfect notes";
+"所有音符改判为PERFECT" = "GREAT/NICE/BAD/MISSをPERFECTにする";
 "使NICE音符不会中断COMBO" = "NICEでもCOMBO継続";
 "使BAD/NICE音符不会中断COMBO" = "NICE/BADでもCOMBO継続";
-// TODO: 需要翻译
-"使你的COMBO不会中断" = "your combo will not be broken";
+"使你的COMBO不会中断" = "NICE/BAD/MISSでもCOMBO継続";
 "使你的生命不会减少" = "ライフが減少しなくなる";
-// TODO: 需要翻译
-"使所有音符恢复你 %d 点生命" = "all notes will restore %d health";
+"使所有音符恢复你 %d 点生命" = "全てノーツがライフ %d 回復";
 "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "ライフを %2$d 消費し、PERFECTのスコア %1$d%% アップ、NICE/BADでもCOMBO継続";
 "使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "PERFECTのスコア %d%% アップ、PERFECTのみCOMBO継続";
-// TODO: 需要翻译
-"会发生有趣的事情" = "something interesting will happen";
+"会发生有趣的事情" = "面白いことが起こりそうです（？）";
 "使所有PERFECT音符恢复你 %d 点生命" = "PERFECTでライフ %d 回復";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "PERFECT/GREATでライフ %d 回復";
 "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "PERFECT/GREAT/NICEでライフ %d 回復";
-// TODO: 需要翻译
-"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "他アイドルの特技効果を大アップ";
+"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "発動中のスコア・COMBOのボーナス %d%% アップ、ライフ回復・ガードする共にライフ1回復、判定強化の範囲は1段階増す";
 "当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "キュートアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "クールアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "パッションアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "获得额外的 %d%% 的COMBO加成，并使所有PERFECT音符恢复你 %d 点生命" = "COMBOボーナス %d%% アップ、PERFECTでライフ %d 回復";
 
 "每 %d 秒，" = "%d 秒毎、";
-"有 %@%% 的几率" = "%@%% 確率で";
-// TODO: 这句在句尾，语序不方便调整，怎么翻译合适？
-"，持续 %@ 秒。" = " for %@ seconds.";
+"有 %@%% 的几率" = "%@%% の確率で";
+"，持续 %@ 秒。" = "、%@ 秒間に継続します。";
 
-"所有Cute" = "キュートアイドル";
-"所有Cool" = "クールアイドル";
-"所有Passion" = "パッションアイドル";
+"所有Cute" = "Cuteアイドル";
+"所有Cool" = "Coolアイドル";
+"所有Passion" = "Passionアイドル";
 "所有" = "全員";
 
 "Vocal表现值" = "ボーカルアピール値";
@@ -771,19 +765,16 @@
 "生命" = "ライフ";
 "特技发动几率" = "特技発動確率";
 
-"提升%@偶像的%@ %d%%。" = "%1$@の%2$@ %3$d%% アップ。";
-// TODO: 需要翻译，例：当Cute、(Cool和Passion)属性的偶像存在于队伍时
-"%@和%@" = "%@ and %@";
+"提升%@偶像的%@ %d%%。" = "%1$@の%2$@ %3$d%% アップ";
+"%@和%@" = "%@ と %@";
 "、" = "、";
 "只有%@" = "%@のみ";
 "当%@属性的偶像存在于队伍时，" = "%@アイドル編成時、";
-// 为了与其他技能用词统一，原本从未翻译过的三属性，在这里还是翻译为好
-"Cute" = "キュート";
-"Cool" = "クール";
-"Passion" = "パッション";
-// TODO: 需要翻译
+"Cute" = "Cute";
+"Cool" = "Cool";
+"Passion" = "Passion";
 "此队长技能的内部描述格式未定义" = "I don't know how to describe this leader skill.";
 /* end of skill explain localization */
 
 // new app name
-"DereGuide" = "デレガイド";
+"DereGuide" = "DereGuide";
