--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -697,7 +697,7 @@
 "左滑删除" = "左スワイプで消す";
 "筛选条件" = "スクリーニング条件";
 "最低潜能等级" = "ポテLv.最低値";
-"添加一名偶像" = "添加一名偶像";
+"添加一名偶像" = "アイドルを選択";
 "不限" = "制限なし";
 
 // using deresute.me
@@ -765,7 +765,7 @@
 "生命" = "ライフ";
 "特技发动几率" = "特技発動確率";
 
-"提升%@偶像的%@ %d%%。" = "%1$@の%2$@ %3$d%% アップ";
+"提升%@偶像的%@ %d%%。" = "%1$@の%2$@ %3$d%% アップ。";
 "%@和%@" = "%@ と %@";
 "、" = "、";
 "只有%@" = "%@のみ";
@@ -773,7 +773,6 @@
 "Cute" = "Cute";
 "Cool" = "Cool";
 "Passion" = "Passion";
-"此队长技能的内部描述格式未定义" = "I don't know how to describe this leader skill.";
 /* end of skill explain localization */
 
 // new app name
