--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 设置页面 */
-"DereGuide问题反馈" = "デレガイドに関するフィードバック";
+"DereGuide问题反馈" = "DereGuideに関するフィードバック";
 
 /* 队伍详情页面 */
 "Co曲" = "Co曲";
@@ -443,7 +443,7 @@
 
 "为什么会有这个页面？" = "このページについて";
 
-"DereGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是DereGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "デレガイドは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、デレガイドの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
+"DereGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是DereGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "DereGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、DereGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
 
 "如何支持我们？" = "応援方法について";
 "您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "以下いずれかのアプリ内課金アイテムを購入するで私たちを応援することができます。このページの広告を取り除きます。";
@@ -538,7 +538,7 @@
 "Data Sources" = "Data Sources";
 "Special Thanks to" = "Special Thanks to";
 "Copyright of Game Data" = "Copyright of Game Data";
-"Copyright of デレガイド" = "Copyright of デレガイド";
+"Copyright of DereGuide" = "Copyright of DereGuide";
 "Third-party Libraries" = "Third-party Libraries";
 
 "请等待更新完成或手动取消更新后，再尝试缓存图片。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びキャッシュを行ってください。";
