--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -743,10 +743,10 @@
 "使所有PERFECT音符恢复你 %d 点生命" = "PERFECTでライフ %d 回復";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "PERFECT/GREATでライフ %d 回復";
 "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "PERFECT/GREAT/NICEでライフ %d 回復";
-"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "発動中のスコア・COMBOのボーナス %d%% アップ、ライフ回復・ガードする共にライフ1回復、判定強化の範囲は1段階増す";
-"当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "キュートアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
-"当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "クールアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
-"当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "パッションアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
+"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "発動中のスコア・COMBOのボーナス %d%% アップ、ライフ回復・ガードする時ライフ1回復、判定強化の適用範囲を1段階広ける";
+"当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Cuteアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
+"当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Coolアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
+"当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Passionアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "获得额外的 %d%% 的COMBO加成，并使所有PERFECT音符恢复你 %d 点生命" = "COMBOボーナス %d%% アップ、PERFECTでライフ %d 回復";
 
 "每 %d 秒，" = "%d 秒毎、";
@@ -758,9 +758,9 @@
 "所有Passion" = "Passionアイドル";
 "所有" = "全員";
 
-"Vocal表现值" = "ボーカルアピール値";
-"Visual表现值" = "ビジュアルアピール値";
-"Dance表现值" = "ダンスアピール値";
+"Vocal表现值" = "Vocalアピール値";
+"Visual表现值" = "Visualアピール値";
+"Dance表现值" = "Danceアピール値";
 "所有表现值" = "全アピール値";
 "生命" = "ライフ";
 "特技发动几率" = "特技発動確率";
