--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -108,7 +108,7 @@
 "完成" = "完了";
 
 /* 设置页面 */
-"将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。" = "すべての画像、カード、および楽曲データを削除します。動作に問題が無い限り、データの削除は非推奨です。";
+"将会清除所有缓存的图片、卡片、谱面数据。除非数据出现问题，不建议使用此选项。" = "すべての画像、カード、および譜面データを削除します。動作に問題が無い限り、データの削除は非推奨です。";
 
 /* 卡片详情页 */
 "属性排名" = "ステータス順位";
@@ -307,9 +307,6 @@
 "获取到的卡数据异常" = "取得したカードデータは異常です";
 
 /* 弹出框正文 */
-"获取到的歌曲数据异常" = "取得した楽曲データは異常です";
-
-/* 弹出框正文 */
 "获取到的谱面数据异常" = "取得した譜面データは異常です";
 
 /* 卡片详情页 */
@@ -421,7 +418,7 @@
 "全选" = "全選択";
 "图片" = "画像";
 "卡片" = "カード";
-"歌曲" = "楽曲";
+"谱面" = "譜面";
 "用户配置" = "ユーザープロファイル";
 "需重启应用" = "アプリの再起動が必要";
 
@@ -557,7 +554,7 @@
 /* new in 1.2.3 */
 "变更时间" = "変更時間";
 "首次出现时间" = "初登場時間";
-"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "対応するの楽曲データが見つかりません。また、現時点に公式が譜面データを配布していません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
+"未找到对应谱面，建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。如果更新后仍未找到，可能是官方还未更新此谱面。" = "対応するの譜面データが見つかりません。また、現時点に公式が譜面データを配布していません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
 
 /* new in 1.2.4 */
 // Skill Type: Concentration
