--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -111,7 +111,7 @@
 "完成" = "完成";
 
 /* 设置页面 */
-"将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。" = "將會清除所有快取的圖片、卡片、歌曲資料。除非數據出現問題，不建議使用此選項。";
+"将会清除所有缓存的图片、卡片、谱面数据。除非数据出现问题，不建议使用此选项。" = "將會清除所有快取的圖片、卡片、譜面資料。除非數據出現問題，不建議使用此選項。";
 
 /* 卡片详情页 */
 "属性排名" = "屬性排名";
@@ -309,9 +309,6 @@
 "获取到的卡数据异常" = "獲取到的卡牌數據異常";
 
 /* 弹出框正文 */
-"获取到的歌曲数据异常" = "獲取到的歌曲數據異常";
-
-/* 弹出框正文 */
 "获取到的谱面数据异常" = "獲取到的譜面數據異常";
 
 /* 卡片详情页 */
@@ -422,7 +419,7 @@
 "全选" = "全選";
 "图片" = "圖片";
 "卡片" = "卡片";
-"歌曲" = "歌曲";
+"谱面" = "谱面";
 "用户配置" = "使用者配置";
 "需重启应用" = "需重啟程式";
 
