--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -110,7 +110,7 @@
 "完成" = "完成";
 
 /* 设置页面 */
-"将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。" = "将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。";
+"将会清除所有缓存的图片、卡片、谱面数据。除非数据出现问题，不建议使用此选项。" = "将会清除所有缓存的图片、卡片、谱面数据。除非数据出现问题，不建议使用此选项。";
 
 /* 卡片详情页 */
 "属性排名" = "属性排名";
@@ -308,9 +308,6 @@
 "获取到的卡数据异常" = "获取到的卡数据异常";
 
 /* 弹出框正文 */
-"获取到的歌曲数据异常" = "获取到的歌曲数据异常";
-
-/* 弹出框正文 */
 "获取到的谱面数据异常" = "获取到的谱面数据异常";
 
 /* 卡片详情页 */
@@ -420,7 +417,7 @@
 "全选" = "全选";
 "图片" = "图片";
 "卡片" = "卡片";
-"歌曲" = "歌曲";
+"谱面" = "谱面";
 "用户配置" = "用户配置";
 "需重启应用" = "需重启应用";
 
