--- a/DereGuide/ja.lproj/Main.strings
+++ b/DereGuide/ja.lproj/Main.strings
@@ -12,7 +12,7 @@
 "1ey-jy-bHg.title" = "キャラのフィルタ・ソート";
 
 /* Class = "UITableViewController"; title = "歌曲筛选和排序"; ObjectID = "2yB-7S-JxI"; */
-"2yB-7S-JxI.title" = "楽曲のフィルタ・ソート";
+"2yB-7S-JxI.title" = "譜面のフィルタ・ソート";
 
 /* Class = "UINavigationController"; title = "卡片导航"; ObjectID = "5Hs-jz-swe"; */
 "5Hs-jz-swe.title" = "カードナビ";
@@ -36,7 +36,7 @@
 "Ji2-5n-2Mz.title" = "ユニット";
 
 /* Class = "UINavigationController"; title = "歌曲导航"; ObjectID = "KxG-H5-NIc"; */
-"KxG-H5-NIc.title" = "楽曲ナビ";
+"KxG-H5-NIc.title" = "譜面ナビ";
 
 /* Class = "UILabel"; text = "清除缓存数据"; ObjectID = "L0F-L7-4EY"; */
 "L0F-L7-4EY.text" = "キャッシュ削除";
@@ -44,8 +44,8 @@
 /* Class = "UINavigationController"; title = "设置导航"; ObjectID = "Lc3-lA-ZOL"; */
 "Lc3-lA-ZOL.title" = "設定ナビ";
 
-/* Class = "UINavigationItem"; title = "歌曲"; ObjectID = "OeQ-8h-gYQ"; */
-"OeQ-8h-gYQ.title" = "楽曲";
+/* Class = "UINavigationItem"; title = "谱面"; ObjectID = "OeQ-8h-gYQ"; */
+"OeQ-8h-gYQ.title" = "譜面";
 
 /* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "S9a-oB-UoS"; */
 "S9a-oB-UoS.headerTitle" = "ソート";
@@ -74,8 +74,8 @@
 /* Class = "UILabel"; text = "启动时自动检查更新"; ObjectID = "fhG-RG-Edf"; */
 "fhG-RG-Edf.text" = "アプリ起動時に更新の確認を行う";
 
-/* Class = "UITabBarItem"; title = "歌曲"; ObjectID = "gE2-j0-zef"; */
-"gE2-j0-zef.title" = "楽曲";
+/* Class = "UITabBarItem"; title = "谱面"; ObjectID = "gE2-j0-zef"; */
+"gE2-j0-zef.title" = "譜面";
 
 /* Class = "UITabBarItem"; title = "设置"; ObjectID = "gI8-ss-NS6"; */
 "gI8-ss-NS6.title" = "設定";
