--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -705,7 +705,7 @@
 "下一步" = "次へ";
 "获取数据中..." = "データを取得中...";
 "您输入的游戏ID不存在" = "ご入力したゲームIDは存在しないです";
-"输入您的游戏ID" = "ゲームIDを入力";
+"输入您的游戏ID" = "あなたのゲームIDを入力";
 // using manually input
 "双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "ダブルタップで全てのアイドルから選択、ロングタップでポテ振りやアイドル消す、「わたしのセンター」で少なくとも1タイプを登録しなければ掲載できません";
 "至少添加一名自己的队长" = "少なくとも1タイプのセンターを登録しなければならない";
