--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -772,3 +772,9 @@
 
 // new app name
 "DereGuide" = "DereGuide";
+
+/* new in 1.6 */
+"人组合" = "人组合"; // 歌曲是由几人组合演唱的, 2人组合, 5人组合等
+"Solo" = "Solo";
+"未指定" = "未指定"; // 作为歌曲筛选项目出现, "お願い ! シンデレラ"等mv中未指定center的歌曲
+"歌曲名/词曲作者/演唱者" = "歌曲名/词曲作者/演唱者";
