--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -460,8 +460,8 @@
 
 "降序" = "降順";
 "升序" = "昇順";
-"筛选" = "スクリーニング";
-"排序" = "ソート";
+"筛选" = "絞り込む";
+"排序" = "並べ替える";
 
 "常规歌曲" = "通常曲";
 
@@ -549,7 +549,7 @@
 "卡池封面" = "ガシャヘッダー";
 
 
-"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未知なスキルタイプを存在します。計算結果の正しさは保証できません。";
+"队伍中存在未知的技能类型，计算结果可能不准确。" = "ユニットに未定義(undefined)のスキルタイプを存在します。計算結果の正しさは保証できません。";
 
 /* new in 1.2.3 */
 "变更时间" = "変更時間";
@@ -634,12 +634,12 @@
 "默认特技等级" = "既定特技Lv.";
 "最近使用" = "最近に使う";
 
-"最近使用中也包含好友的队长" = "「最近に使う」にゲストセンターも含んでる";
+"最近使用中也包含好友的队长" = "「最近に使う」にゲストセンターも含む";
 "修改最近使用中的偶像潜能同步到同角色所有卡片" = "「最近に使う」にポテンシャルの設定を\n該当キャラの他のカードにも同期する";
 
 "最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "「最近に使う」にはポテンシャルと特技レベルが一致する同じカードを同じアイドルとして扱います。タップして下画面の編集枠にアイドルを変更します。ロングタップしてアイドルのポテンシャルや特技レベルを編集します、該当アイドルを含んでるユニットにも同期更新します。その他に、アイドルのポテンシャル設定は該当キャラの他のカードにも同期します（アドバンスオプションに切ってきます）";
 
-"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更\nダブルタップ：すべてのカードに選択\nロングタップ：ポテンシャルや特技レベルの編集";
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更\nダブルタップ：すべてのカードから選択\nロングタップ：ポテンシャルや特技レベルの編集";
 
 "至少进行一次模拟计算之后才能进行高级计算" = "計算する前にまず一回シミュレート計算して下さい";
 "高级计算" = "アドバンス計算";
@@ -653,7 +653,7 @@
 "模拟结果中前x%的最低分数" = "ｼﾐｭﾚｰﾄ結果に前部x%の最低値";
 "模拟结果中后x%的最高分数" = "ｼﾐｭﾚｰﾄ結果に後部x%の最高値";
 "模拟结果中分数落入指定区间[a, b]的概率" = "ｼﾐｭﾚｰﾄ結果にスコアが指定間隔[a, b]に当たる確率";
-"不填表示" = "入力なし＝";  // -∞ 或 +∞
+"不填表示" = "入力なし＝";  // -∞ or +∞
 "根据概率密度曲线估算分数区间[a, b]的概率" = "確率密度曲線によるスコア間隔[a, b]の推定当たる確率";
 "参考值" = "参考値";
 "自定义计算" = "カスタム計算";
@@ -672,27 +672,27 @@
 /* new in 1.5.0 */
 "删除" = "消す";
 "寻找同僚" = "同僚を探す";
-"我的信息" = "わたしの情報";
+"我的信息" = "プロデュース情報";
 "发布" = "掲載する";
 "游戏ID" = "ゲームID";
 "昵称" = "ニックネーム";
-"我的队长" = "わたしのセンターアイドル";
-"希望征集的队长" = "募集したいセンターアイドル";
+"我的队长" = "ゲスト参戦アイドル";
+"希望征集的队长" = "募集したいゲストアイドル";
 "留言" = "コメント";
 
 "下拉刷新数据" = "プルダウンで再読み込む";
 "获取数据失败，请检查您的网络并确保iCloud处于登录状态" = "データ取得失敗。iCloudログイン状況とネットワーク接続状況を確認してください。";
-"已复制ID到剪贴板" = "ゲームIDがクリップボードにコピーしました";
+"已复制ID到剪贴板" = "ゲームIDがクリップボードにコピーされました";
 "没有更多数据了" = "データは読み込み完了しました";
-"加载更多" = "もっと読み込む";
+"加载更多" = "さらに読み込む";
 "正在加载..." = "読み込み中...";
 
-"位置" = "タイプ";
-"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "今は1タイプのみスクリーニングできます。スクリーニングしないの場合は「制限なし」を選択してください";
+"位置" = "タイプ別";
+"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "現在1タイプのみでの絞り込みができます。絞り込めたくないの場合は「制限なし」を選択してください。";
 "潜能" = "ポテンシャル";
 "偶像" = "アイドル";
 "左滑删除" = "左スワイプで消す";
-"筛选条件" = "スクリーニング条件";
+"筛选条件" = "絞り込み条件";
 "最低潜能等级" = "ポテLv.最低値";
 "添加一名偶像" = "アイドルを選択";
 "不限" = "制限なし";
@@ -704,11 +704,11 @@
 "您输入的游戏ID不存在" = "ご入力したゲームIDは存在しないです";
 "输入您的游戏ID" = "あなたのゲームIDを入力";
 // using manually input
-"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "ダブルタップで全てのアイドルから選択、ロングタップでポテ振りやアイドル消す、「わたしのセンター」で少なくとも1タイプを登録しなければ掲載できません";
-"至少添加一名自己的队长" = "少なくとも1タイプのセンターを登録しなければならない";
+"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "ダブルタップで全てのアイドルから選択、ロングタップでポテ振りやアイドル消す、「ゲスト参戦アイドル」で少なくとも1タイプを登録しなければ掲載できません";
+"至少添加一名自己的队长" = "少なくとも1タイプのアイドルを登録しなければならない";
 "昵称不能超过10个文字" = "ニックネームは10文字超えることはできない";
 // both
-"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "わたしの情報を全てのユーザーに配布します。再度掲載する場合、元の情報は上書きされし、更新時間を更新します";
+"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "プロデュース情報を全てのユーザーに配布します。再び掲載する場合、元の情報は上書きされし、更新時間も更新されます。";
 "您输入的游戏ID不合法" = "不正なゲームIDです";
 "发布失败，请确保iCloud已登录并且网络状态正常" = "掲載失敗。iCloudログイン状況とネットワーク接続状況を確認してください。";
 "撤销失败，请确保iCloud已登录并且网络状态正常" = "取り消し失敗。iCloudログイン状況とネットワーク接続状況を確認してください。";
