--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -432,6 +432,7 @@
 /* 数据更新时的错误提示 */
 "数据服务器存在异常，请您稍后再尝试更新。" = "資料伺服器存在異常，請您稍後再嘗試更新。";
 
+
 /* new in v1.2.0 */
 "支持作者" = "支援作者";
 "为什么会有这个页面？" = "為什麼會有這個頁面？";
@@ -454,6 +455,8 @@
 "排序" = "排序";
 
 "常规歌曲" = "常規歌曲";
+"传统活动" = "傳統活動";
+"Groove活动" = "Groove活動";
 
 "已付声" = "已付聲";
 "未付声" = "未付聲";
@@ -488,7 +491,6 @@
 "FES限定卡池" = "FES限定卡池";
 "单属性卡池" = "單屬性卡池";
 "普通卡池" = "普通卡池";
-
 
 /* new in v1.2.0(7+) */
 "3D模型" = "3D模型";
@@ -563,7 +565,7 @@
 // used in 3d touch peek menu
 "收藏" = "收藏";
 "取消收藏" = "取消收藏";
-"Skill Boost" = "技能增强";
+"Skill Boost" = "技能增強";
 
 /* new in 1.2.6 */
 // new controller for score detail
@@ -660,8 +662,8 @@
 /* new in 1.5.0 */
 "删除" = "刪除";
 "寻找同僚" = "尋找同僚";
-"我的信息" = "我的設定檔";
-"发布" = "釋出";
+"我的信息" = "我的資料";
+"发布" = "發佈";
 "游戏ID" = "遊戲ID";
 "昵称" = "暱稱";
 "我的队长" = "我的隊長";
@@ -692,7 +694,7 @@
 "您输入的游戏ID不存在" = "您輸入的遊戲ID不存在";
 "输入您的游戏ID" = "輸入您的遊戲ID";
 // using manually input
-"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "雙擊從全部卡片中選擇，長按編輯潛能或者移除偶像，我的隊長中至少要填一個位置才能釋出";
+"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "雙擊從全部卡片中選擇，長按編輯潛能或者移除偶像，我的隊長中至少要填一個位置才能發佈";
 "至少添加一名自己的队长" = "至少新增一名自己的隊長";
 "昵称不能超过10个文字" = "暱稱不能超過10個文字";
 // both
@@ -700,7 +702,7 @@
 "向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有使用者公開您的資訊，重複釋出會自動覆蓋之前的內容並重新整理更新時間";
 "发布失败，请确保iCloud已登录并且网络状态正常" = "釋出失敗，請確保iCloud已登入並且網路狀態正常";
 "撤销失败，请确保iCloud已登录并且网络状态正常" = "撤銷失敗，請確保iCloud已登入並且網路狀態正常";
-"发布成功" = "釋出成功";
+"发布成功" = "發佈成功";
 "撤销成功" = "撤銷成功";
 "撤销中..." = "撤銷中...";
 "撤销" = "撤銷";
