--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -436,9 +436,9 @@
 /* new in v1.2.0 */
 "支持作者" = "支援作者";
 "为什么会有这个页面？" = "為什麼會有這個頁面？";
-"DereGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是DereGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "DereGuide是一款免費應用，現在以及未來都不會增加任何需要收費開啟的功能，也不會使用常駐廣告進行盈利。但是DereGuide的開發和所使用的伺服器的維持都需要一定資金的支援，如果您喜歡這款應用，請支援我們。";
+"DereGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用广告进行盈利。但是DereGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "DereGuide是一款免費應用，現在以及未來都不會增加任何需要收費開啟的功能，也不會使用廣告進行盈利。但是DereGuide的開發和所使用的伺服器的維持都需要一定資金的支援，如果您喜歡這款應用，請支援我們。";
 "如何支持我们？" = "如何支援我們？";
-"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "您可以通過購買下面的兩個商品來支援本程式，購買任何一個商品都將移除本頁面下方的廣告。";
+"您可以通过购买下面的两个虚拟商品来支持本程序。为了更好的App体验，我们决定不在本页添加象征性的广告，因此您的购买不会获得任何虚拟物品或者功能上的扩展。" = "您可以通過購買下面的兩個虛擬商品來支援本程式。為了更好的App體驗，我們決定不在本頁新增象徵性的廣告，因此您的購買不會獲得任何虛擬物品或者功能上的擴充。";
 "广告仅存在于本页面内。" = "廣告僅存在於本頁面內。";
 "感谢您的支持，广告已经被移除。" = "感謝您的支援，廣告已經被移除。";
 "您的设备未开启应用内购买。" = "您的裝置未開啟應用內購買。";
