fix a crash when add image to system photos

--- a/DereGuide/en.lproj/InfoPlist.strings
+++ b/DereGuide/en.lproj/InfoPlist.strings
@@ -7,6 +7,7 @@
 */
 
 NSPhotoLibraryUsageDescription = "For saving images to the camera roll. This permission can be changed from the Settings app.";
+NSPhotoLibraryAddUsageDescription = "For saving images to the camera roll. This permission can be changed from the Settings app.";
 shortcutItemTitle1 = "Card";
 shortcutItemTitle2 = "Beatmap";
 shortcutItemTitle3 = "Event";
