--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -443,7 +443,7 @@
 "DereGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用广告进行盈利。但是DereGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "DereGuideは、「有料な機能」または「広告」が一切入ってない完全無料アプリであり、これからも引き続きプロデューサーの皆様に無料で提供したいと思ってます。しかし、開発やバックエンドサーバーの維持などには費用が必要で、私たち個人の力ではこれからのアプリ運営を維持することが大変難しいです。これからの、DereGuideの運営は、皆様の応援が必要です。このアプリを気に入った方、もしくはこのアプリは使いやすいと思っている方がいらっしゃったら、ぜひ、私たちを応援してください。";
 
 "如何支持我们？" = "応援方法について";
-"您可以通过购买下面的两个虚拟商品来支持本程序。为了更好的App体验，我们决定不在本页添加象征性的广告，因此您的购买不会获得任何虚拟物品或者功能上的扩展。" = "以下いずれかのアプリ内課金アイテムを購入するで私たちを応援することができます。このページの広告を取り除きます。";
+"您可以通过购买下面的两个虚拟商品来支持本程序。为了更好的App体验，我们决定不在本页添加象征性的广告，因此您的购买不会获得任何虚拟物品或者功能上的扩展。" = "以下いずれかのアプリ内課金アイテムを購入するで私たちを応援することができます。より優れた利用体験を提供するため、このページの広告は廃止されます。よって、あなたの購入行為は機能の拡張や仮想アイテムなどを得られません。";
 
 //"广告仅存在于捐赠页面内。" = "広告は寄付ページ以外の画面に表示されません。";
 "广告仅存在于本页面内。" = "広告はこのページ以外の画面に表示されません。";
