--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -460,8 +460,8 @@
 
 "降序" = "降順";
 "升序" = "昇順";
-"筛选" = "絞り込む";
-"排序" = "並べ替える";
+"筛选" = "絞り込み";
+"排序" = "並べ替え";
 
 "常规歌曲" = "通常曲";
 
@@ -637,9 +637,9 @@
 "最近使用中也包含好友的队长" = "「最近に使う」にゲストセンターも含む";
 "修改最近使用中的偶像潜能同步到同角色所有卡片" = "「最近に使う」にポテンシャルの設定を\n該当キャラの他のカードにも同期する";
 
-"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "「最近に使う」にはポテンシャルと特技レベルが一致する同じカードを同じアイドルとして扱います。タップして下画面の編集枠にアイドルを変更します。ロングタップしてアイドルのポテンシャルや特技レベルを編集します、該当アイドルを含んでるユニットにも同期更新します。その他に、アイドルのポテンシャル設定は該当キャラの他のカードにも同期します（アドバンスオプションに切ってきます）";
+"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "「最近に使う」にはポテンシャルと特技レベルが一致する同じカードを同じアイドルとして扱います。タップして下画面の編集枠にアイドルを変更します。長押してアイドルのポテンシャルや特技レベルを編集します、該当アイドルを含んでるユニットにも同期更新します。その他に、アイドルのポテンシャル設定は該当キャラの他のカードにも同期します（アドバンスオプションに切ってきます）";
 
-"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更\nダブルタップ：すべてのカードから選択\nロングタップ：ポテンシャルや特技レベルの編集";
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更\nダブルタップ：すべてのカードから選択\n長押し：ポテンシャルや特技レベルの編集";
 
 "至少进行一次模拟计算之后才能进行高级计算" = "計算する前にまず一回シミュレート計算して下さい";
 "高级计算" = "アドバンス計算";
@@ -691,7 +691,7 @@
 "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "現在1タイプのみでの絞り込みができます。絞り込めたくないの場合は「制限なし」を選択してください。";
 "潜能" = "ポテンシャル";
 "偶像" = "アイドル";
-"左滑删除" = "左スワイプで消す";
+"左滑删除" = "*左スワイプで消せる";
 "筛选条件" = "絞り込み条件";
 "最低潜能等级" = "ポテLv.最低値";
 "添加一名偶像" = "アイドルを選択";
@@ -735,7 +735,7 @@
 "使你的生命不会减少" = "ライフが減少しなくなる";
 "使所有音符恢复你 %d 点生命" = "全てノーツがライフ %d 回復";
 "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "ライフを %2$d 消費し、PERFECTのスコア %1$d%% アップ、NICE/BADでもCOMBO継続";
-"使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "PERFECTのスコア %d%% アップ、PERFECTのみCOMBO継続";
+"使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "PERFECTのスコア %d%% アップ、PERFECTの判定範囲は厳しくになる";
 "会发生有趣的事情" = "面白いことが起こりそうです（？）";
 "使所有PERFECT音符恢复你 %d 点生命" = "PERFECTでライフ %d 回復";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "PERFECT/GREATでライフ %d 回復";
