--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -778,3 +778,4 @@
 "Solo" = "Solo";
 "未指定" = "未指定"; // 作为歌曲筛选项目出现, "お願い ! シンデレラ"等mv中未指定center的歌曲
 "歌曲名/词曲作者/演唱者" = "歌曲名/词曲作者/演唱者";
+"出演MV" = "出演MV"; // 卡详情页面和角色详情页面增加该偶像出演过的mv
