--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -419,7 +419,7 @@
 "全选" = "Select All";
 "图片" = "Images";
 "卡片" = "Cards";
-"谱面" = "Songs";
+"谱面" = "Beatmaps";
 "用户配置" = "Settings";
 "需重启应用" = "restart required";
 
