update localizable strings

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -688,7 +688,7 @@
 "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"";
 "潜能" = "潜能";
 "偶像" = "偶像";
-"左滑删除" = "左滑删除";
+"* 左滑删除" = "* 左滑删除";
 "筛选条件" = "筛选条件";
 "最低潜能等级" = "最低潜能等级";
 "添加一名偶像" = "添加一名偶像";
