--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -679,7 +679,7 @@
 "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "目前僅支援篩選單個位置，如果您不需要篩選請設定為\"不限\"";
 "潜能" = "潛能";
 "偶像" = "偶像";
-"左滑删除" = "左滑刪除";
+"* 左滑删除" = "* 左滑刪除";
 "筛选条件" = "篩選條件";
 "最低潜能等级" = "最低潛能等級";
 "添加一名偶像" = "新增一名偶像";
