--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -684,7 +684,7 @@
 "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "Only support filtering one position each time, if you don't want to filter, set to \"no limit\"";
 "潜能" = "Potential";
 "偶像" = "Idols";
-"左滑删除" = "Swipe to delete";
+"* 左滑删除" = "* Swipe to delete";
 "筛选条件" = "Filter Conditions";
 "最低潜能等级" = "Min. Potential Lv.";
 "添加一名偶像" = "Add an idol";
