--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -691,7 +691,7 @@
 "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "現在1タイプのみでの絞り込みができます。絞り込めたくないの場合は「制限なし」を選択してください。";
 "潜能" = "ポテンシャル";
 "偶像" = "アイドル";
-"左滑删除" = "*左スワイプで消せる";
+"* 左滑删除" = "* 左スワイプで消せる";
 "筛选条件" = "絞り込み条件";
 "最低潜能等级" = "ポテLv.最低値";
 "添加一名偶像" = "アイドルを選択";
