update ui to fit smart live

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -780,3 +780,6 @@
 "歌曲名/词曲作者/演唱者" = "歌曲名/词曲作者/演唱者";
 "出演MV" = "出演MV"; // 卡详情页面和角色详情页面增加该偶像出演过的mv
 "MV站位" = "MV站位";
+"选项" = "选项";
+"隐藏难度文字" = "隐藏难度文字";
+"如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单";
