--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -774,3 +774,14 @@
 
 // new app name
 "DereGuide" = "DereGuide";
+
+/* new in 1.6 */
+"人组合" = "人组合"; // 歌曲是由几人组合演唱的, 2人组合, 5人组合等
+"Solo" = "Solo";
+"未指定" = "未指定"; // 作为歌曲筛选项目出现, "お願い ! シンデレラ"等mv中未指定center的歌曲
+"歌曲名/词曲作者/演唱者" = "歌曲名/词曲作者/演唱者";
+"出演MV" = "出演MV"; // 卡详情页面和角色详情页面增加该偶像出演过的mv
+"MV站位" = "MV站位";
+"选项" = "选项";
+"隐藏难度文字" = "隐藏难度文字";
+"如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单";
