new color theme for beatmap note

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -783,3 +783,9 @@
 "选项" = "选项";
 "隐藏难度文字" = "隐藏难度文字";
 "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单";
+
+/* new in 1.6.1 */
+"颜色方案" = "颜色方案";
+"与歌曲颜色相同" = "与歌曲颜色相同";
+"区分Note类型" = "区分Note类型";
+"纵向缩放比例" = "纵向缩放比例";
