--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -732,7 +732,7 @@
 "使你的生命不会减少" = "使你的生命不会减少";
 "使所有音符恢复你 %d 点生命" = "使所有音符恢复你 %d 点生命";
 "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO";
-"使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO";
+"使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小";
 "会发生有趣的事情" = "会发生有趣的事情";
 "使所有PERFECT音符恢复你 %d 点生命" = "使所有PERFECT音符恢复你 %d 点生命";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "使所有PERFECT/GREAT音符恢复你 %d 点生命";
@@ -786,6 +786,6 @@
 
 /* new in 1.6.1 */
 "颜色方案" = "颜色方案";
+"绘制参数" = "绘制参数";
 "与歌曲颜色相同" = "与歌曲颜色相同";
-"区分Note类型" = "区分Note类型";
 "纵向缩放比例" = "纵向缩放比例";
