--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -735,7 +735,7 @@
 "使你的生命不会减少" = "ライフが減少しなくなる";
 "使所有音符恢复你 %d 点生命" = "全てノーツがライフ %d 回復";
 "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "ライフを %2$d 消費し、PERFECTのスコア %1$d%% アップ、NICE/BADでもCOMBO継続";
-"使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "PERFECTのスコア %d%% アップ、PERFECTの判定範囲は厳しくになる";
+"使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "PERFECTのスコア %d%% アップ、PERFECT判定される時間が短くなる";
 "会发生有趣的事情" = "面白いことが起こりそうです（？）";
 "使所有PERFECT音符恢复你 %d 点生命" = "PERFECTでライフ %d 回復";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "PERFECT/GREATでライフ %d 回復";
@@ -785,3 +785,9 @@
 "选项" = "オプション";
 "隐藏难度文字" = "難易度ﾃｷｽﾄを隠す";
 "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "一部の難易度を隠すや、難易度のテキストを隠したいの場合、サイドメニューを利用してください";
+
+/* new in 1.6.1 */
+"颜色方案" = "颜色方案";
+"绘制参数" = "绘制参数";
+"与歌曲颜色相同" = "与歌曲颜色相同";
+"纵向缩放比例" = "纵向缩放比例";
