--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -723,7 +723,7 @@
 "使你的生命不会减少" = "使你的生命不會減少";
 "使所有音符恢复你 %d 点生命" = "使所有音符恢復你 %d 點生命";
 "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "消耗 %2$d 生命，PERFECT音符獲得 %1$d%% 的分數加成，並且NICE/BAD音符不會中斷COMBO";
-"使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "使所有PERFECT音符獲得 %d%% 的分數加成，且PERFECT以外的判定將中斷COMBO";
+"使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "使所有PERFECT音符獲得 %d%% 的分數加成，且使PERFECT判定區間的時間範圍縮小";
 "会发生有趣的事情" = "會發生有趣的事情";
 "使所有PERFECT音符恢复你 %d 点生命" = "使所有PERFECT音符恢復你 %d 點生命";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "使所有PERFECT/GREAT音符恢復你 %d 點生命";
@@ -773,3 +773,9 @@
 "选项" = "選項";
 "隐藏难度文字" = "隱藏難度文字";
 "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "如需隱藏某些難度，或隱藏難度描述文字，請使用側邊選單";
+
+/* new in 1.6.1 */
+"颜色方案" = "顏色方案";
+"绘制参数" = "繪製引數";
+"与歌曲颜色相同" = "與歌曲顏色相同";
+"纵向缩放比例" = "縱向縮放比例";
