update live simulator for the new concentration skills

--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -554,7 +554,7 @@
 // Skill Type: All Round
 "全才" = "全才";
 
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限分數中所有技能100%觸發\n* 極限分數1中note取Perfect判定±0.06秒中的最優值\n* 模擬計算結果是取模擬次數前x%內的最低分數，每次會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限分數中所有技能100%觸發\n* 極限分數1中note取Perfect判定區間中的最優值\n* 模擬計算結果是取模擬次數前x%內的最低分數，每次會略有不同\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
 
 "一般计算" = "一般計算";
 "模拟计算" = "模擬計算";
@@ -608,7 +608,7 @@
 /* new in 1.3.2 */
 
 "得分分布" = "得分分佈";
-"Great占比%" = "Great佔比%";
+"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "Great佔比%(此項設定並未考慮因專注技能導致Great不受加成的因素)";
 "小屋加成%" = "小屋加成%";
 "模拟次数" = "模擬次數";
 "* 不含后援值，歌曲模式为常规模式" = "* 不含後援值，歌曲模式為常規模式";
