--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -564,7 +564,7 @@
 // Skill Type: All Round
 "全才" = "全才";
 
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
 
 "一般计算" = "一般计算";
 "模拟计算" = "模拟计算";
@@ -617,7 +617,7 @@
 
 /* new in 1.3.2 */
 "得分分布" = "得分分布";
-"Great占比%" = "Great占比%";
+"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)";
 "小屋加成%" = "小屋加成%";
 "模拟次数" = "模拟次数";
 "* 不含后援值，歌曲模式为常规模式" = "* 不含后援值，歌曲模式为常规模式";
