--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -616,11 +616,7 @@
 "模拟计算中生命不足时不发动过载技能" = "シミュ計算にオバロ発動条件を考える";
 
 /* new in 1.3.2 */
-
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
-
 "得分分布" = "スコア確率分布";
-"Great占比%" = "GREAT割合%";
 "小屋加成%" = "ﾙｰﾑｱｲﾃﾑボーナス%";
 "模拟次数" = "シミュレート回数";
 "* 不含后援值，歌曲模式为常规模式" = "* 通常モードのサポートアピール含んでない数値です";
@@ -791,3 +787,5 @@
 "绘制参数" = "绘制参数";
 "与歌曲颜色相同" = "与歌曲颜色相同";
 "纵向缩放比例" = "纵向缩放比例";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
+"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "GREAT割合%";
