--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -783,9 +783,9 @@
 "如需隐藏某些难度，或隐藏难度描述文字，请使用侧边菜单" = "一部の難易度を隠すや、難易度のテキストを隠したいの場合、サイドメニューを利用してください";
 
 /* new in 1.6.1 */
-"颜色方案" = "颜色方案";
-"绘制参数" = "绘制参数";
-"与歌曲颜色相同" = "与歌曲颜色相同";
-"纵向缩放比例" = "纵向缩放比例";
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
-"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "GREAT割合%";
+"颜色方案" = "カラーリング";
+"绘制参数" = "描画パラメータ";
+"与歌曲颜色相同" = "楽曲タイプと同じ色";
+"纵向缩放比例" = "縦向きスケーリング";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定区间中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算にPERFECT判定は最適値を取りますよう補正を行います\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています"; // 不再指明±0.06秒, 而是根据难度和note类型变化
+"Great占比%(此项设置并未考虑因专注技能导致Great不受加成的因素)" = "GREAT割合%(ｺﾝｾﾝﾄﾚｰｼｮﾝによるGREATは考慮しません)";
